--- a/frontend/src/app/components/dashboard/dashboard.html
+++ b/frontend/src/app/components/dashboard/dashboard.html
@@ -1,16 +1,71 @@
 <div class="dashboard-container">
-  <h2>📊 Salary Distribution by Designation</h2>
+ <h2>📊 Salary Distribution by Designation</h2>
+  <div *ngIf="salaryData.length && salaryData[0].value > 0; else hiddenSalary">
+    <ngx-charts-bar-vertical
+      [view]="view"
+      [scheme]="colorScheme"
+      [results]="salaryData"
+      [gradient]="false"
+      [xAxis]="true"
+      [yAxis]="true"
+      [legend]="false"
+      [showXAxisLabel]="true"
+      [showYAxisLabel]="true"
+      xAxisLabel="Designation"
+      yAxisLabel="Salary (₹)">
+    </ngx-charts-bar-vertical>
+  </div>
+  <ng-template #hiddenSalary>
+    <div class="hidden-data-text">This data is hidden</div>
+  </ng-template>
+  
+    <h2>👥 Employees by Department</h2>
   <ngx-charts-bar-vertical
     [view]="view"
     [scheme]="colorScheme"
-    [results]="salaryData"
+    [results]="deptData"
     [gradient]="false"
     [xAxis]="true"
     [yAxis]="true"
     [legend]="false"
     [showXAxisLabel]="true"
     [showYAxisLabel]="true"
-    xAxisLabel="Designation"
-    yAxisLabel="Salary (₹)">
+    xAxisLabel="Department"
+    yAxisLabel="Number of Employees">
   </ngx-charts-bar-vertical>
+
+  <h2>📅 Employees Joined Per Year</h2>
+  <ngx-charts-bar-vertical
+    [view]="view"
+    [scheme]="colorScheme"
+    [results]="joinedYearData"
+    [gradient]="false"
+    [xAxis]="true"
+    [yAxis]="true"
+    [legend]="false"
+    [showXAxisLabel]="true"
+    [showYAxisLabel]="true"
+    xAxisLabel="Year"
+    yAxisLabel="Number of Employees">
+  </ngx-charts-bar-vertical>
+
+ <h2>🟢 Active vs Inactive Employees</h2>
+<div *ngIf="statusData.length && statusData[0].value > 0; else hiddenStatus">
+  <ngx-charts-pie-chart
+    [view]="view"
+    [scheme]="colorScheme"
+    [results]="statusData"
+    [legend]="true"
+    [labels]="true">
+  </ngx-charts-pie-chart>
+</div>
+
+<ng-template #hiddenStatus>
+  <div class="hidden-data-text">This data is hidden</div>
+</ng-template>
+
+  <!-- Show hidden message when 403 error occurs -->
+  <div *ngIf="isHidden" class="hidden-message">
+    This data is hidden
+  </div>
 </div>
