--- a/frontend/src/app/components/employee-form/employee-form.html
+++ b/frontend/src/app/components/employee-form/employee-form.html
@@ -14,7 +14,18 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
-      <input matInput formControlName="email">
+      <input matInput formControlName="email" required type="email" autocomplete="off">
+      <mat-error *ngIf="form.get('email')?.hasError('required')">
+        Email is required
+      </mat-error>
+      <mat-error *ngIf="form.get('email')?.hasError('email') && !form.get('email')?.hasError('required')">
+        Please enter a valid email address
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Phone</mat-label>
+      <input matInput formControlName="phone">
     </mat-form-field>
 
     <mat-form-field appearance="outline">
@@ -31,7 +42,26 @@
       <mat-label>Salary</mat-label>
       <input matInput type="number" formControlName="salary">
     </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Date of Joining</mat-label>
+      <input matInput type="date" formControlName="dateOfJoining">
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Manager ID</mat-label>
+      <input matInput type="number" formControlName="managerId">
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>User ID</mat-label>
+      <input matInput type="number" formControlName="userId">
+    </mat-form-field>
   </div>
+
+  <mat-checkbox formControlName="status" color="primary">
+    Active Status
+  </mat-checkbox>
 
   <button mat-flat-button color="primary">{{ editMode ? 'Update' : 'Add' }}</button>
 </form>
