--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -1,6 +1,13 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
-<span style="font-weight:700;margin-left:8px">Employee Directory</span>
-<span style="flex:1 1 auto"></span>
-<button mat-icon-button aria-label="notifications"><mat-icon>notifications</mat-icon></button>
-<button mat-icon-button aria-label="account"><mat-icon>account_circle</mat-icon></button>
+  <span style="font-weight:700;margin-left:8px">Employee Directory</span>
+  <span style="flex:1 1 auto"></span>
+  <button mat-icon-button aria-label="notifications">
+    <mat-icon>notifications</mat-icon>
+  </button>
+  <button mat-icon-button aria-label="account">
+    <mat-icon>account_circle</mat-icon>
+  </button>
+  <button mat-icon-button aria-label="logout" (click)="logout()">
+    <mat-icon>logout</mat-icon>
+  </button>
 </mat-toolbar>
