--- a/frontend/src/app/components/employee-form/employee-form.scss
+++ b/frontend/src/app/components/employee-form/employee-form.scss
@@ -8,3 +8,18 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1rem;
 }
+.add-btn {
+  display: block;
+  margin: 2rem auto 0 auto;
+  padding: 0.8rem 2.8rem;
+  font-size: 1.18rem;
+  font-weight: 600;
+  color:white;
+  letter-spacing: 0.5px;
+  border-radius: 30px;
+  background: linear-gradient(92deg, #37b0ff 25%, #2186eb 100%);
+  box-shadow: 0 4px 12px rgba(33,134,235,0.12);
+  transition: transform 0.13s, box-shadow 0.13s, background 0.3s;
+}
+
+
