Modified the frontend and backend

--- a/frontend/src/app/components/login/login.html
+++ b/frontend/src/app/components/login/login.html
@@ -1,5 +1,9 @@
 <div class="auth-overlay">
+
   <div class="auth-card">
+     <div class="auth-header">
+    EmpTree
+  </div>
     <h2>Login</h2>
     <form [formGroup]="form" (ngSubmit)="submit()" class="form">
       <mat-form-field appearance="outline">
