--- a/frontend/src/app/components/login/login.html
+++ b/frontend/src/app/components/login/login.html
@@ -14,8 +14,8 @@
         <mat-label>Password*</mat-label>
         <input matInput formControlName="password" type="password">
       </mat-form-field>
-      <button mat-flat-button color="primary" type="submit" style="width:100%;margin-top:10px;">
-        Login
+      <button mat-stroked-button  color="primary" type="submit" class="auth-main-btn" style="width:100%;margin-top:10px;">
+        Log in
       </button>
       <div *ngIf="error" class="error-message">{{ error }}</div>
     </form>
